--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "~4.9.x"
+    "body-parser": "^1.12.4",
+    "express": "~4.9.x",
+    "express-json": "^1.0.0"
   },
   "engines": {
     "node": "0.12.2"
